# music-prod

./: .gitignore  README.md  calm_melody.mid  custom_melody.mid  energetic_melody.mid  lydian_melody.mid  main.py  pyproject.toml  random_melody.mid
batch_scripts/: main.py  pyproject.toml  wave_relo.bat
data/: analysis_results.json
data/New Presets/: 808 Atlas.fxp  808 Burst.fxp  808 Cthulhu.fxp  808 Dagon.fxp  808 Ding Dong.fxp  808 Dome.fxp  808 Dramatic.fxp  808 Fat Man.fxp  808 Ghast.fxp  808 Gloon.fxp  808 Goat.fxp  808 Haunt.fxp  808 Hawk.fxp  808 Honeycomb.fxp  808 Little Boy.fxp  808 Matador.fxp  808 Overview.fxp  808 Poseidon.fxp  808 Rebellion.fxp  808 Redstone.fxp  808 Ride.fxp  808 Runner.fxp  808 Shark.fxp  808 Silver.fxp  808 Spartan.fxp  808 Thin Man.fxp  808 Titan.fxp  808 Torpedo.fxp  808 Venus.fxp  808 Warhead.fxp  ARP Assobio.fxp  ARP Beating Pulse.fxp  ARP Industrial Hit.fxp  ARP Machine Gun.fxp  ARP Noise Pulse Pad.fxp  ARP Pulsing Bass _ Lead.fxp  ARP Pulsing Bass.fxp  ARP Soft Pulse.fxp  ARP Sweep Scrape.fxp  ATM Longepakas.fxp  (+683 more)
data/To Dedup/: ACID_Formant_thing 2.fxp  ACID_Formant_thing.fxp  Arp.fxp  (+690 more)
file_scripts/: file_prefix.py  random_strings.csv  remove_file_prefix.py  remove_preset_duplicates.py  rename_loops.py
midi_scripts/: calm_melody_v2.mid  energetic_melody_v2.mid  improved_midi_generator.py  lydian_dream_v2.mid  m21_melody_generator.py  m21_playground.py  random_melody.mid
vis_scripts/: basic_music_animation.py
wave_scripts/: analyze_librosa.py  audio_analysis.py  remove_leading_audio.py  run_librosa.py  run_spotipy.py
(+3 files in other folders)
